--- a/docs/locales/ja/LC_MESSAGES/quickstart.po
+++ b/docs/locales/ja/LC_MESSAGES/quickstart.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Generic MCTS Framework 0.0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-10-08 23:43+0900\n"
-"PO-Revision-Date: 2025-09-13 16:42+0900\n"
+"POT-Creation-Date: 2025-10-09 21:46+0900\n"
+"PO-Revision-Date: 2025-10-09 00:30+0900\n"
 "Last-Translator: Gemini <gemini@google.com>\n"
 "Language: ja\n"
 "Language-Team: ja <LL@li.org>\n"
@@ -18,13 +18,14 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.17.0\n"
+"Generated-By: Babel 2.15.0\n"
 
 #: ../../quickstart.rst:4
 msgid "Quickstart"
 msgstr "クイックスタート"
 
 #: ../../quickstart.rst:6
+#, fuzzy
 msgid ""
 "This project provides a generic Monte Carlo Tree Search (MCTS) framework."
 " Its core concept is the replacement of the Genetic Programming (GP) "
@@ -34,182 +35,133 @@ msgid ""
 "Pruning**—narrowing the search space by supplying a pre-filtered list of "
 "promising moves."
 msgstr ""
+"このプロジェクトは、汎用的なモンテカルロ木探索（MCTS）フレームワークを提供します。その中心的な概念は、``chess-"
+"ant``の遺伝的プログラミング（GP）エンジンを現代的なAIエージェントで置き換えることです。AlphaZeroに触発されつつも、よりシンプルで疎結合なアプローチを採用しています。標準的なUCTアルゴリズムが、有望な手のリストを事前にフィルタリングして提供することで探索空間を狭める**Policy"
+" \"\"Pruning**を実行する外部AIエージェントによって拡張されています。"
 
 #: ../../quickstart.rst:8
+#, fuzzy
 msgid ""
 "This guide covers how to install the package and configure it for use "
 "with an AI agent like the Gemini CLI."
-msgstr ""
+msgstr "このガイドでは、パッケージのインストール方法と、Gemini CLIのようなAIエージェントで使用するための設定方法について説明します。"
 
 #: ../../quickstart.rst:11
 msgid "Installation"
 msgstr "インストール"
 
 #: ../../quickstart.rst:14
-#, fuzzy
 msgid "Standard Installation"
-msgstr "インストール"
+msgstr "標準インストール"
 
 #: ../../quickstart.rst:16
 msgid "The core package can be installed directly using pip:"
-msgstr ""
+msgstr "コアパッケージはpipを使用して直接インストールできます："
 
 #: ../../quickstart.rst:23
 msgid "Installation with Game-Specific Dependencies"
-msgstr ""
+msgstr "ゲーム固有の依存関係を含むインストール"
 
 #: ../../quickstart.rst:25
+#, fuzzy
 msgid ""
 "To include support for specific games, you can install optional "
 "dependencies (extras). For example, to install with support for Shogi:"
-msgstr ""
+msgstr "特定のゲームのサポートを含めるには、オプションの依存関係（extras）をインストールできます。例えば、将棋のサポートをインストールするには："
 
 #: ../../quickstart.rst:31
+#, fuzzy
 msgid ""
 "This will automatically install the ``python-shogi`` library alongside "
 "the core package."
-msgstr ""
+msgstr "これにより、``python-shogi``ライブラリがコアパッケージと共に自動的にインストールされます。"
 
 #: ../../quickstart.rst:34
 msgid "Server Setup for Gemini CLI"
-msgstr ""
+msgstr "Gemini CLIのためのサーバー設定"
 
 #: ../../quickstart.rst:36
+#, fuzzy
 msgid ""
 "To allow the Gemini agent to use the MCTS-Gen tools, you must register "
 "the server in your ``settings.json`` file. This allows the Gemini CLI to "
 "automatically manage the server process and provide the necessary context"
 " files."
 msgstr ""
+"GeminiエージェントがMCTS-"
+"Genツールを使用できるようにするには、サーバーを``settings.json``ファイルに登録する必要があります。これにより、Gemini "
+"CLIがサーバープロセスを自動的に管理し、必要なコンテキストファイルを提供できるようになります。"
 
 #: ../../quickstart.rst:38
+#, fuzzy
 msgid ""
 "Create or update your ``settings.json`` file with the following "
 "configuration:"
-msgstr ""
+msgstr "以下の設定で``settings.json``ファイルを作成または更新してください："
 
 #: ../../quickstart.rst:60
+#, fuzzy
 msgid ""
 "**Note**: The ``context`` block tells the Gemini CLI to load "
 "``AGENTS.md`` (and ``GEMINI.md`` if it exists), which is crucial for the "
 "agent to understand how to use the tools."
 msgstr ""
+"**注**: ``context``ブロックは、Gemini "
+"CLIに``AGENTS.md``（および存在する場合は``GEMINI.md``）を読み込むよう指示します。これはエージェントがツールの使い方を理解するために不可欠です。"
 
 #: ../../quickstart.rst:62
 msgid "You can place this ``settings.json`` file in one of two locations:"
-msgstr ""
+msgstr "この``settings.json``ファイルは、次の2つの場所のいずれかに配置できます："
 
 #: ../../quickstart.rst:64
+#, fuzzy
 msgid ""
 "**Project-Specific**: ``./.gemini/settings.json`` (inside this project "
 "directory)"
-msgstr ""
+msgstr "**プロジェクト固有**: ``./.gemini/settings.json``（このプロジェクトディレクトリ内）"
 
 #: ../../quickstart.rst:65
 msgid "**Global**: ``~/.gemini/settings.json`` (in your home directory)"
-msgstr ""
+msgstr "**グローバル**: ``~/.gemini/settings.json``（ホームディレクトリ内）"
 
 #: ../../quickstart.rst:67
+#, fuzzy
 msgid ""
 "For an alternative setup method using the ``fastmcp`` command-line tool, "
 "please see the official guide:"
-msgstr ""
+msgstr "``fastmcp``コマンドラインツールを使用した別の設定方法については、公式ガイドを参照してください："
 
 #: ../../quickstart.rst:69
 msgid "`Gemini CLI 🤝 FastMCP <https://gofastmcp.com/integrations/gemini-cli>`_"
-msgstr ""
+msgstr "`Gemini CLI 🤝 FastMCP <https://gofastmcp.com/integrations/gemini-cli>`_"
 
 #: ../../quickstart.rst:72
 msgid "For Maintainers: How to Release a New Version"
-msgstr ""
+msgstr "メンテナー向け：新しいバージョンのリリース方法"
 
 #: ../../quickstart.rst:74
 msgid "The package publication process is automated using GitHub Actions."
-msgstr ""
+msgstr "パッケージの公開プロセスはGitHub Actionsを使用して自動化されています。"
 
 #: ../../quickstart.rst:77
 msgid "Releasing to TestPyPI (for testing)"
-msgstr ""
+msgstr "TestPyPIへのリリース（テスト用）"
 
 #: ../../quickstart.rst:79
+#, fuzzy
 msgid ""
 "To release a version to the TestPyPI repository for verification, create "
 "and push a git tag with a ``-test`` suffix."
-msgstr ""
+msgstr "TestPyPIリポジトリにバージョンをリリースして検証するには、``-test``接尾辞を付けてgitタグを作成し、プッシュします。"
 
 #: ../../quickstart.rst:88
 msgid "Releasing to PyPI (Official)"
-msgstr ""
+msgstr "PyPIへのリリース（公式）"
 
 #: ../../quickstart.rst:90
+#, fuzzy
 msgid ""
 "To perform an official release, create and push a git tag that follows "
 "the semantic versioning format (e.g., ``vX.Y.Z``)."
-msgstr ""
-
-#~ msgid "**For Users:**"
-#~ msgstr "**利用者向け:**"
-
-#~ msgid "**For Developers:**"
-#~ msgstr "**開発者向け:**"
-
-#~ msgid "Running the Servers"
-#~ msgstr "サーバーの起動"
-
-#~ msgid "**1. FastAPI Server (for web clients):**"
-#~ msgstr "**1. FastAPIサーバー (Webクライアント向け):**"
-
-#~ msgid "**2. FastMCP Server (for AI agents):**"
-#~ msgstr "**2. FastMCPサーバー (AIエージェント向け):**"
-
-#~ msgid "Local Execution (REPL)"
-#~ msgstr "ローカル実行 (REPL)"
-
-#~ msgid "Create a ``config.json`` file in the project root:"
-#~ msgstr "プロジェクトルートに ``config.json`` ファイルを作成します:"
-
-#~ msgid "Run the interactive REPL:"
-#~ msgstr "対話型REPLを実行します:"
-
-#~ msgid "AI Agent Integration (Gemini CLI)"
-#~ msgstr "AIエージェント連携 (Gemini CLI)"
-
-#~ msgid ""
-#~ "To enable an AI agent like Gemini"
-#~ " CLI to effectively use this "
-#~ "framework, you need to provide it "
-#~ "with the agent instructions."
-#~ msgstr "Gemini CLIのようなAIエージェントがこのフレームワークを効果的に使用するには、エージェントに指示を与える必要があります。"
-
-#~ msgid "**Locate ``AGENTS.md``**: This file is in the root of the project."
-#~ msgstr "**AGENTS.mdの配置**: このファイルはプロジェクトのルートにあります。"
-
-#~ msgid ""
-#~ "**Configure Gemini CLI**: Set the "
-#~ "``contextFileName`` in your "
-#~ "``~/.gemini/settings.json`` to point to the"
-#~ " absolute path of the ``AGENTS.md`` "
-#~ "file in this project."
-#~ msgstr ""
-#~ "**Gemini CLIの設定**: ``~/.gemini/settings.json`` の "
-#~ "``contextFileName`` に、このプロジェクトの ``AGENTS.md`` "
-#~ "ファイルへの絶対パスを設定します。"
-
-#~ msgid ""
-#~ "**Register the Tools**: Start the "
-#~ "FastMCP server and register it with "
-#~ "your agent:"
-#~ msgstr "**ツールの登録**: FastMCPサーバーを起動し、エージェントに登録します:"
-
-#~ msgid ""
-#~ "**Interact**: You can now instruct the"
-#~ " agent with natural language. For "
-#~ "example:"
-#~ msgstr "**対話**: これで、自然言語でエージェントに指示できます。例:"
-
-#~ msgid "\"Create a game of Tic-Tac-Toe for me.\""
-#~ msgstr "\"三目並べのゲームを作って\""
-
-#~ msgid "\"Run a search on the current Tic-Tac-Toe game for 100 steps.\""
-#~ msgstr "\"現在の三目並べのゲームで100ステップの探索を実行して\""
+msgstr "公式リリースを実行するには、セマンティックバージョニング形式（例：``vX.Y.Z``）に従ったgitタグを作成してプッシュします。"
 
