--- a/docs/locales/ja/LC_MESSAGES/index.po
+++ b/docs/locales/ja/LC_MESSAGES/index.po
@@ -4,16 +4,15 @@
 # Framework package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2025.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Generic MCTS Framework 0.0.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-09-13 16:41+0900\n"
-"PO-Revision-Date: 2025-09-13 16:43+0900\n"
-"Last-Translator: Gemini <gemini@google.com>\n"
+"PO-Revision-Date: 2025-10-10 23:04+0900\n"
+"Last-Translator: Gemini\n"
 "Language: ja\n"
-"Language-Team: ja <LL@li.org>\n"
+"Language-Team: ja\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
