--- a/docs/locales/ja/LC_MESSAGES/paper.po
+++ b/docs/locales/ja/LC_MESSAGES/paper.po
@@ -1,19 +1,18 @@
 
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: mcts-gen 0.1.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-10-09 21:56+0900\n"
-"PO-Revision-Date: 2025-10-09 00:30+0900\n"
-"Last-Translator: Gemini <gemini@google.com>\n"
+"POT-Creation-Date: 2025-10-11 14:40+0900\n"
+"PO-Revision-Date: 2025-10-11 14:49+0900\n"
+"Last-Translator: Akihiro Kuroiwa <akuroiwa@env-reform.com>\n"
 "Language: ja\n"
 "Language-Team: ja\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.15.0\n"
+"Generated-By: Babel 2.17.0\n"
 
 #: ../../paper.rst:5
 msgid "Paper: AI-Augmented UCT for General Game Playing"
@@ -25,7 +24,7 @@ msgstr "author"
 
 #: ../../paper.rst:7
 msgid "Akihiro Kuroiwa and Gemini"
-msgstr "Akihiro Kuroiwa and Gemini"
+msgstr "黒岩晃弘 と Gemini"
 
 #: ../../paper.rst
 msgid "date"
@@ -57,9 +56,9 @@ msgid ""
 msgstr ""
 "本稿では、遺伝的プログラミング（GP）の進化的メカニズムを現代的なAIエージェントで置き換える、モンテカルロ木探索（MCTS）のための新しいフレームワーク"
 "`mcts-"
-"gen`を紹介する。我々は「AI拡張UCT」アルゴリズムを中心としたアーキテクチャを提案する。このアルゴリズムでは、標準的なUCT探索が外部AIによって3つの重要な点で強化される。すなわち、末端ノード評価（価値）、動的な探索パラメータ調整（探索）、そして最も重要な点として、**Policy"
-" "
-"Pruning（方針による枝刈り）**による行動空間の削減である。このアプローチは、UCTアルゴリズムの単純さを維持しつつ、AIの方針モデルを活用して将棋のような巨大な分岐因子を持つゲームのパフォーマンスを劇的に向上させる点で、一般的なAlphaZeroモデルとは一線を画す。我々は、AIエージェントがリアルタイムのパフォーマンス指標に基づいて戦略を繰り返し洗練させながら、シミュレーションループ全体を統括する、ステートフルなクライアントサーバーモデルを実証する。"
+"gen`を紹介する。我々は「AI拡張UCT」アルゴリズムを中心としたアーキテクチャを提案する。このアルゴリズムでは、標準的なUCT探索が外部AIによって3つの重要な点で強化される。すなわち、末端ノード評価（Value:"
+" 価値）、動的な探索パラメータ調整（Exploration: 探索）、そして最も重要な点として、**Policy "
+"Pruning（Policyによる枝刈り）**による行動空間の削減である。このアプローチは、UCTアルゴリズムの単純さを維持しつつ、AIの方針モデルを活用して将棋のような巨大な分岐因子を持つゲームのパフォーマンスを劇的に向上させる点で、一般的なAlphaZeroモデルとは一線を画す。我々は、AIエージェントがリアルタイムのパフォーマンス指標に基づいて戦略を繰り返し洗練させながら、シミュレーションループ全体を統括する、ステートフルなクライアントサーバーモデルを実証する。"
 
 #: ../../paper.rst:16
 msgid "1. Replacing Genetic Programming with an AI Agent"
@@ -78,7 +77,6 @@ msgstr ""
 "ant`のような過去の研究では、MCTSの`explorationConstant`を調整する戦略を進化させるために遺伝的プログラミングが使用された。このプロセスは効果的である一方、大規模な個体群と多くの世代を要する、計算コストの高い進化サイクルを伴った。個々の評価には完全なMCTSシミュレーションが必要であり、多大な時間的投資を要した。"
 
 #: ../../paper.rst:20
-#, fuzzy
 msgid ""
 "`mcts-gen` replaces this entire evolutionary loop with a single, "
 "intelligent AI agent. The agent maintains a single strategic model (e.g.,"
@@ -108,7 +106,9 @@ msgid ""
 "the selection phase of MCTS via the PUCT (Polynomial Upper Confidence "
 "Trees) formula. While powerful, this tightly couples the search algorithm"
 " with the policy model."
-msgstr "AlphaZeroとその派生技術は、PUCT（多項式UCT）の計算式を介して、MCTSの選択フェーズに方針ネットワークを直接統合する。これは強力である一方、探索アルゴリズムと方針モデルを密結合させる。"
+msgstr ""
+"AlphaZeroとその派生技術は、PUCT（Polynomial Upper Confidence "
+"Trees）の計算式を介して、MCTSの選択段階にpolicyネットワークを直接統合する。これは強力である一方、探索アルゴリズムと方針モデルを密結合させる。"
 
 #: ../../paper.rst:29
 msgid ""
@@ -127,7 +127,7 @@ msgid ""
 "The agent applies its internal policy model to this list, filtering out "
 "unpromising moves and creating a smaller, pruned list of candidate "
 "actions."
-msgstr "エージェントは自身の内部的な方針モデルをこのリストに適用し、有望でない手を除外して、より小さな、枝刈りされた候補手のリストを作成する。"
+msgstr "エージェントは自身の内部的なpolicyモデルをこのリストに適用し、有望でない手を除外して、より小さな、枝刈りされた候補手のリストを作成する。"
 
 #: ../../paper.rst:33
 msgid ""
@@ -148,7 +148,7 @@ msgid ""
 " in complex games like Shogi. It allows the underlying engine to remain a"
 " standard UCT implementation, simplifying the architecture while still "
 "reaping the primary benefit of a policy network."
-msgstr "この手法は、AIの方針を高度なフィルターとして効果的に使用し、特に将棋のような複雑なゲームにおいて、探索木の分岐因子を劇的に削減する。これにより、根底にあるエンジンは標準的なUCT実装のままでよく、アーキテクチャを単純化しつつ、方針ネットワークの主要な利点を享受することができる。"
+msgstr "この手法は、AIのpolicyを高度なフィルターとして効果的に使用し、特に将棋のような複雑なゲームにおいて、探索木の分岐因子を劇的に削減する。これにより、根底にあるエンジンは標準的なUCT実装のままでよく、アーキテクチャを単純化しつつ、policyネットワークの主要な利点を享受することができる。"
 
 #: ../../paper.rst:39
 msgid "3. UCT with AI-driven Exploration"
@@ -160,8 +160,8 @@ msgid ""
 "bounds for Trees) algorithm for node selection. The key innovation lies "
 "in how the `explorationConstant` (C in the UCT formula) is determined."
 msgstr ""
-"PUCTの代わりに、`mcts-"
-"gen`はノード選択に標準的なUCT（木に対する信頼性上限）アルゴリズムを使用する。主要な革新は、`explorationConstant`（UCT計算式におけるC）がどのように決定されるかにある。"
+"PUCTの代わりに、`mcts-gen`はノード選択に標準的なUCT(Upper Confidence bounds for "
+"Trees)アルゴリズムを使用する。主要な革新は、`explorationConstant`（UCT計算式におけるC）がどのように決定されるかにある。"
 
 #: ../../paper.rst:43
 msgid ""
@@ -186,7 +186,7 @@ msgid ""
 "The AI executes this strategy to choose a constant for each simulation "
 "loop and refines the strategy code based on performance, effectively "
 "learning how to best balance exploration and exploitation."
-msgstr "AIはこの戦略を実行して各シミュレーションループの定数を選択し、パフォーマンスに基づいて戦略コードを洗練させることで、探索と活用のバランスを最適に取る方法を効果的に学習する。"
+msgstr "AIはこの戦略を実行して各シミュレーションループの定数を選択し、パフォーマンスに基づいて戦略コードを洗練させることで、探索(exploration)と活用(exploitation)のバランスを最適に取る方法を効果的に学習する。"
 
 #: ../../paper.rst:48
 msgid "4. Other Differences from AlphaZero"
@@ -243,24 +243,25 @@ msgid ""
 "generation. It requires iterative trial and error, debugging, and a "
 "precise understanding of concepts like object copying (`deepcopy`), "
 "return value conventions, and API-specific methods (e.g., "
-"`board.outcome()` vs. `board.is_checkmate()`)."
+"`board.is_checkmate()` vs. `GameStateBase.takeAction(action)`)."
 msgstr ""
-"我々の経験によれば、このプロセスは単純な一度きりの生成ではない。それには、オブジェクトのコピー（`deepcopy`）、戻り値の規約、API固有のメソッド（例:"
-" "
-"`board.outcome()`対`board.is_checkmate()`）といった概念の正確な理解と、繰り返しの試行錯誤、デバッグが必要である。"
+"我々の経験によれば、このプロセスは単純な一度きりの生成(one-shot "
+"generation)ではない。それには、オブジェクトのコピー（`deepcopy`）、戻り値の規約、そしてAPI固有のメソッド（例: "
+"`board.is_checkmate()` 対 "
+"`GameStateBase.takeAction(action)`）といった概念の正確な理解と、繰り返しの試行錯誤、デバッグが必要である。"
 
 #: ../../paper.rst:61
 msgid ""
-"The use of a framework like `spec-kit` is highly recommended for this "
-"process. By defining the requirements in structured markdown files "
-"(`spec.md`, `plan.md`, `tasks.md`), the AI can follow a clear, test-"
-"driven development (TDD) cycle, breaking down the complex task into "
-"manageable steps and verifying each one, which has proven essential for "
-"success."
+"The use of a toolkit for Spec-Driven Development like `spec-kit` is "
+"highly recommended for this process. By defining the requirements in "
+"structured markdown files (`spec.md`, `plan.md`, `tasks.md`), the AI can "
+"follow a clear, test-driven development (TDD) cycle, breaking down the "
+"complex task into manageable steps and verifying each one, which has "
+"proven essential for success."
 msgstr ""
-"このプロセスには`spec-kit`のようなフレームワークの使用を強く推奨する。構造化されたマークダウンファイル（`spec.md`, "
-"`plan.md`, "
-"`tasks.md`）で要件を定義することにより、AIは明確なテスト駆動開発（TDD）サイクルに従うことができ、複雑なタスクを管理可能なステップに分解してそれぞれを検証することが、成功に不可欠であることが証明された。"
+"このプロセスには、`spec-kit`のようなSpec-Driven "
+"Developmentのためのツールキットの使用を強く推奨する。構造化されたマークダウンファイル（`spec.md`, `plan.md`, "
+"`tasks.md`）で要件を定義することにより、AIは明確なテスト駆動開発（TDD）サイクルに従うことができ、複雑なタスクを管理可能なステップに分解してそれぞれを検証することが、成功に不可欠であることが証明されている。"
 
 #: ../../paper.rst:64
 msgid "6. Comparison with `chess-ant`'s GP Model"
@@ -276,7 +277,7 @@ msgid ""
 "many generations, is computationally massive."
 msgstr ""
 "**`chess-ant`:** `chess-"
-"ant`の遺伝的プログラミングモデルは、大規模な進化的シミュレーションに依存しています。集団内の各個体の評価のために、統計に使用される主要なインスタンス変数はリセットされますが、基礎となるMCTS探索木は維持されます。多くの世代にわたって各個体に対して完全なMCTSシミュレーションが実行されるこのプロセスは、計算量が膨大です。"
+"ant`の遺伝的プログラミングモデルは、大規模な進化的シミュレーションに依存している。集団内の各個体の評価のために、統計に使用される主要なインスタンス変数はリセットされるが、基礎となるMCTS探索木は維持される。多くの世代にわたって各個体に対して完全なMCTSシミュレーションが実行されるこのプロセスは、計算量が膨大だ。"
 
 #: ../../paper.rst:67
 msgid ""
@@ -292,10 +293,11 @@ msgid ""
 "search process, especially when combined with Policy Pruning."
 msgstr ""
 "**`mcts-gen`:** "
-"AIエージェントが個体群全体を置き換えます。それは*単一の*戦略を維持し、それを繰り返し改善します。AIは、各イテレーションが`run_mcts_round`ツールを呼び出すメインループを駆動します。このツールはMCTSの1ラウンド（選択、展開、評価、更新）を実行します。MCTSインスタンスはこれらの呼び出しをまたいで維持され、探索木の成長を可能にします。これは"
-"`chess-"
-"ant`における1回のMCTSシミュレーションに相当しますが、戦略の洗練は世代的な進化を通じてではなく、各ラウンドの後にAIによって知的に行われます。その結果、特にPolicy"
-" Pruningと組み合わせることで、著しく効率的な探索プロセスが実現されます。"
+"AIエージェントが個体群全体を置き換える。それは*単一の*戦略を維持し、それを繰り返し改善する。AIは、各イテレーションが`run_mcts_round`ツールを呼び出すメインループを駆動する。このツールはMCTSの1ラウンド（selection:"
+" 選択、expansion: 展開、evaluation: 評価、backpropagation: "
+"更新）を実行する。MCTSインスタンスはこれらの呼び出しをまたいで維持され、探索木の成長を可能にする。これは`chess-"
+"ant`における1回のMCTSシミュレーションに相当するが、戦略の洗練は世代的な進化を通じてではなく、各ラウンドの後にAIによって知的に行われる。その結果、特にPolicy"
+" Pruningと組み合わせることで、著しく効率的な探索プロセスが実現される。"
 
 #: ../../paper.rst:70
 msgid "7. References"
@@ -323,19 +325,28 @@ msgstr ""
 "/220962507_Monte-Carlo_Tree_Search_Solver>`_."
 
 #: ../../paper.rst:78
+msgid "**Related Projects & Libraries:**"
+msgstr "**関連プロジェクトとライブラリ:**"
+
+#: ../../paper.rst:80
+msgid "`pbsinclair42/MCTS <https://github.com/pbsinclair42/MCTS>`_"
+msgstr "`pbsinclair42/MCTS <https://github.com/pbsinclair42/MCTS>`_"
+
+#: ../../paper.rst:81
+msgid "`akuroiwa/mcts-solver <https://github.com/akuroiwa/mcts-solver>`_"
+msgstr "`akuroiwa/mcts-solver <https://github.com/akuroiwa/mcts-solver>`_"
+
+#: ../../paper.rst:82
+msgid "`akuroiwa/chess-ant <https://github.com/akuroiwa/chess-ant>`_"
+msgstr "`akuroiwa/chess-ant <https://github.com/akuroiwa/chess-ant>`_"
+
+#: ../../paper.rst:83
 msgid ""
-"**Related Projects & Libraries:** - `pbsinclair42/MCTS "
-"<https://github.com/pbsinclair42/MCTS>`_ - `akuroiwa/mcts-solver "
-"<https://github.com/akuroiwa/mcts-solver>`_ - `akuroiwa/chess-ant "
-"<https://github.com/akuroiwa/chess-ant>`_ - `chess-ant documentation "
-"<https://chess-ant.readthedocs.io/>`_ (Contains an extensive list of "
-"references on its paper page) - `gunyarakun/python-shogi "
-"<https://github.com/gunyarakun/python-shogi>`_"
-msgstr ""
-"**関連プロジェクトとライブラリ:** - `pbsinclair42/MCTS "
-"<https://github.com/pbsinclair42/MCTS>`_ - `akuroiwa/mcts-solver "
-"<https://github.com/akuroiwa/mcts-solver>`_ - `akuroiwa/chess-ant "
-"<https://github.com/akuroiwa/chess-ant>`_ - `chess-ant documentation "
-"<https://chess-ant.readthedocs.io/>`_ (その論文ページに広範な参考文献リストが含まれています) - "
-"`gunyarakun/python-shogi <https://github.com/gunyarakun/python-shogi>`_"
+"`chess-ant documentation <https://chess-ant.readthedocs.io/>`_ (Contains "
+"an extensive list of references on its paper page)"
+msgstr "`chess-ant documentation <https://chess-ant.readthedocs.io/>`_ (その論文ページに広範な参考文献リストが含まれている)"
+
+#: ../../paper.rst:84
+msgid "`gunyarakun/python-shogi <https://github.com/gunyarakun/python-shogi>`_"
+msgstr "`gunyarakun/python-shogi <https://github.com/gunyarakun/python-shogi>`_"
 
