--- a/docs/locales/ja/LC_MESSAGES/paper.po
+++ b/docs/locales/ja/LC_MESSAGES/paper.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: mcts-gen 0.1.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-10-11 14:40+0900\n"
-"PO-Revision-Date: 2025-10-11 14:49+0900\n"
+"PO-Revision-Date: 2025-10-14 23:29+0900\n"
 "Last-Translator: Akihiro Kuroiwa <akuroiwa@env-reform.com>\n"
 "Language: ja\n"
 "Language-Team: ja\n"
@@ -53,12 +53,7 @@ msgid ""
 "such as Shogi. We demonstrate a stateful client-server model where the AI"
 " agent orchestrates the entire simulation loop, iteratively refining its "
 "strategy based on real-time performance metrics."
-msgstr ""
-"本稿では、遺伝的プログラミング（GP）の進化的メカニズムを現代的なAIエージェントで置き換える、モンテカルロ木探索（MCTS）のための新しいフレームワーク"
-"`mcts-"
-"gen`を紹介する。我々は「AI拡張UCT」アルゴリズムを中心としたアーキテクチャを提案する。このアルゴリズムでは、標準的なUCT探索が外部AIによって3つの重要な点で強化される。すなわち、末端ノード評価（Value:"
-" 価値）、動的な探索パラメータ調整（Exploration: 探索）、そして最も重要な点として、**Policy "
-"Pruning（Policyによる枝刈り）**による行動空間の削減である。このアプローチは、UCTアルゴリズムの単純さを維持しつつ、AIの方針モデルを活用して将棋のような巨大な分岐因子を持つゲームのパフォーマンスを劇的に向上させる点で、一般的なAlphaZeroモデルとは一線を画す。我々は、AIエージェントがリアルタイムのパフォーマンス指標に基づいて戦略を繰り返し洗練させながら、シミュレーションループ全体を統括する、ステートフルなクライアントサーバーモデルを実証する。"
+msgstr "本稿では、遺伝的プログラミング（GP）の進化的メカニズムを現代的なAIエージェントで置き換える、モンテカルロ木探索（MCTS）のための新しいフレームワーク`mcts-gen`を紹介する。我々は「AI拡張UCT」アルゴリズムを中心としたアーキテクチャを提案する。このアルゴリズムでは、標準的なUCT探索が外部AIによって3つの重要な点で強化される。すなわち、末端ノード評価（Value: 価値）、動的な探索パラメータ調整（Exploration: 探索）、そして最も重要な点として、 **Policy Pruning（Policyによる枝刈り）** による行動空間の削減である。このアプローチは、UCTアルゴリズムの単純さを維持しつつ、AIの方針モデルを活用して将棋のような巨大な分岐因子を持つゲームのパフォーマンスを劇的に向上させる点で、一般的なAlphaZeroモデルとは一線を画す。我々は、AIエージェントがリアルタイムのパフォーマンス指標に基づいて戦略を繰り返し洗練させながら、シミュレーションループ全体を統括する、ステートフルなクライアントサーバーモデルを実証する。"
 
 #: ../../paper.rst:16
 msgid "1. Replacing Genetic Programming with an AI Agent"
@@ -114,7 +109,7 @@ msgstr ""
 msgid ""
 "We propose a simpler, more decoupled approach: **Policy Pruning**. The "
 "workflow is as follows:"
-msgstr "我々は、よりシンプルで疎結合なアプローチである**Policy Pruning**を提案する。そのワークフローは以下の通りである。"
+msgstr "我々は、よりシンプルで疎結合なアプローチである **Policy Pruning** を提案する。そのワークフローは以下の通りである。"
 
 #: ../../paper.rst:31
 msgid ""
